--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -9,12 +9,15 @@
     <style type="text/css">
       p {
         background-color: rgb(0%,100%,0%);
+        font-size: 35px;
+        text-align: center;
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="background-color: darkorange">Inline Method</button>
+    <button style="background-color: darkorange; font-size: 30px; text-align: center; font-weight: bold;">Inline Method</button>
   </body>
 </html>
